<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/dashbackground">

    <!-- Title -->

    <!-- Name Field -->

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:text="@string/setting_editor_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SEName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundedrectangle"
        android:hint="@string/hint_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle" />

    <EditText
        android:id="@+id/SEEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedrectangle"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SEName" />

    <EditText
        android:id="@+id/SEPhone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedrectangle"
        android:hint="@string/hint_phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SEEmail" />

    <EditText
        android:id="@+id/SEWorkplace"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedrectangle"
        android:hint="@string/hint_workplace"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SEPhone" />

    <EditText
        android:id="@+id/SETipout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedrectangle"
        android:hint="@string/hint_tipout"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SEWorkplace" />

    <Button
        android:id="@+id/SESave"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SETipout" />

    <Button
        android:id="@+id/SEBack"
        android:layout_width="307dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SESave"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
