<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashbackground"
    tools:context=".Settings">

    <TextView
        android:id="@+id/SetTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SetEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SetEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SetName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetTitle" />

    <TextView
        android:id="@+id/SetName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SetPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetEmail" />

    <TextView
        android:id="@+id/SetPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SetWorkplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetName" />

    <TextView
        android:id="@+id/SetWorkplace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SetTipOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetPhone" />

    <TextView
        android:id="@+id/SetTipOut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SetEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetWorkplace" />

    <Button
        android:id="@+id/SetEdit"
        android:layout_width="211dp"
        android:layout_height="60dp"
        android:layout_marginBottom="19dp"
        android:text="@string/btn_edit"
        app:layout_constraintBottom_toTopOf="@+id/SetBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetTipOut" />

    <Button
        android:id="@+id/SetBackBtn"
        android:layout_width="198dp"
        android:layout_height="56dp"
        android:layout_marginBottom="78dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>
